--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -5,26 +5,26 @@
 // variables css
 $header-height: 3rem;
 
-  // color css
-  $first-color: #26A69A;
-  $first-color-lighter: #EFF3F2;
-  $title-color:#11443F;
-  $text-color: #5B7B78;
-  $body-color: #F5FFFE;
+// color css
+$first-color: #26A69A;
+$first-color-lighter: #EFF3F2;
+$title-color:#11443F;
+$text-color: #5B7B78;
+$body-color: #F5FFFE;
 
-  // Font & Typographie
-  $body-font: 'Poppins', sans-serif;
-  $biggest-font-size: 3rem;
-  $big-font-size: 1.25rem;
-  $normal-font-size: .938rem;
+// Font & Typographie
+$body-font: 'Poppins', sans-serif;
+$biggest-font-size: 3rem;
+$big-font-size: 1.25rem;
+$normal-font-size: .938rem;
 
-  // Font weight
-  $font-medium: 500;
-  $font-semi-bold: 600;
+// Font weight
+$font-medium: 500;
+$font-semi-bold: 600;
 
-  // z index
-  $z-tooltip: 10;
-  $z-fixed: 100;
+// z index
+$z-tooltip: 10;
+$z-fixed: 100;
 
 @media screen and (min-width: 1024px) {
 
@@ -75,4 +75,14 @@ img {
   max-width: 968px;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+
+// Header
+
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: $z-fixed;
 }
