--- a/index.pug
+++ b/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
     link(rel="stylesheet", href="./node_modules/boxicons/css/boxicons.min.css")
 
     // SWIPER CSS
-    link(rel="stylesheet", href="./node_modules/swiper/swiper-bundle.css")
+    link(rel="stylesheet", href="./node_modules/swiper/swiper-bundle.min.css")
 
     // CSS
     link(rel="stylesheet", href="./assets/scss/index.css")
@@ -33,7 +33,7 @@ html(lang="en")
     main.main
       div 
         div
-          //islands 1
+          // Islands
           each val, key in [{subtitle: 'Islands 1', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/01.jpg'}, {subtitle: 'Islands 2', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/02.jpg'}, {subtitle: 'Islands 3', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/03.jpg'}]
             section.islands
               img(src= val.image, alt="").islands__bg
@@ -49,14 +49,18 @@ html(lang="en")
                   .islands__video-content
                     i.bx.bx-play-circle.islands__video-icon
           
-
+          // ISLANDS POPUP
           .islands__popup#popup
             div 
                .islands__popup-close#popup-close
                  i.bx.bx-x
                iframe(class="islands__popup-video" src="https://www.youtube.com/embed/6GBVaHH_6bQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
 
-
+          // CONTROLS
+          .controls
+            .controls__container
+              each val in [{image: './assets/img/01.jpg'}, {image: './assets/img/02.jpg'}, {image: './assets/img/03.jpg'}]
+                img(src=val.image , alt="").controls__img 
 
     // GSAP
     script(src="./node_modules/gsap/dist/gsap.min.js") 
