--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -165,6 +165,7 @@ img {
   color: #26A69A; }
 
 .islands__popup {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -188,3 +189,35 @@ img {
   font-size: 1.2rem;
   border-radius: 50%;
   cursor: pointer; }
+
+.show-popup {
+  display: block; }
+
+.controls__img {
+  width: 35px;
+  height: 35px;
+  border-radius: .5rem;
+  cursor: pointer; }
+
+.controls {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  padding: .25rem .5rem;
+  background-color: #EFF3F2;
+  border-radius: .75rem;
+  z-index: 10;
+  overflow: hidden; }
+
+.controls__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-column-gap: 1rem;
+  column-gap: 1rem; }
