--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -221,3 +221,11 @@ img {
   align-items: center;
   -webkit-column-gap: 1rem;
   column-gap: 1rem; }
+
+/* Active controls */
+.swiper-slide-thumb-active {
+  width: 45px;
+  height: 45px;
+  -webkit-transition: .4s ease-out;
+  -o-transition: .4s ease-out;
+  transition: .4s ease-out; }
