--- a/index.pug
+++ b/index.pug
@@ -31,11 +31,14 @@ html(lang="en")
 
     // main
     main.main
-      div 
-        div
+      // Slider main container
+      div.swiper.mySwiper2
+        // Additional required wrapper
+        div.swiper-wrapper
           // Islands
           each val, key in [{subtitle: 'Islands 1', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/01.jpg'}, {subtitle: 'Islands 2', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/02.jpg'}, {subtitle: 'Islands 3', title: 'Lorem, ipsum', description: 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam', image: './assets/img/03.jpg'}]
-            section.islands
+            // Slides 
+            section.islands.swiper-slide
               img(src= val.image, alt="").islands__bg
               .islands__container.bd-container
                 .islands__data
@@ -56,11 +59,11 @@ html(lang="en")
                  i.bx.bx-x
                iframe(class="islands__popup-video" src="https://www.youtube.com/embed/6GBVaHH_6bQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
 
-          // CONTROLS
-          .controls
-            .controls__container
-              each val in [{image: './assets/img/01.jpg'}, {image: './assets/img/02.jpg'}, {image: './assets/img/03.jpg'}]
-                img(src=val.image , alt="").controls__img 
+      // CONTROLS
+      .controls.mySwiper
+        .controls__container.swiper-wrapper
+          each val in [{image: './assets/img/01.jpg'}, {image: './assets/img/02.jpg'}, {image: './assets/img/03.jpg'}]
+            img(src=val.image , alt="").controls__img.swiper-slide 
 
     // GSAP
     script(src="./node_modules/gsap/dist/gsap.min.js") 
