--- a/index.pug
+++ b/index.pug
@@ -42,14 +42,14 @@ html(lang="en")
               img(src= val.image, alt="").islands__bg
               .islands__container.bd-container
                 .islands__data
-                  h2.islands__subtitle= val.subtitle
-                  h1.islands__title= val.title
-                  p.islands__description= val.description
-                  a.islands__button(href="#") Explore
+                  h2.test1.islands__subtitle= val.subtitle
+                  h1.test2.islands__title= val.title
+                  p.test3.islands__description= val.description
+                  a.test4.islands__button(href="#") Explore
                     i.bx.bx-right-arrow-alt.islands__button-icon
 
                 .islands__video
-                  .islands__video-content
+                  .islands__video-content.test5
                     i.bx.bx-play-circle.islands__video-icon
           
           // ISLANDS POPUP
